<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgeFragment">

    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lucidatypewriterregular"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5sp"
            android:text="@string/hometextviet"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143" />
        <EditText
            android:id="@+id/luutuoine"
            android:layout_width="229dp"
            android:layout_height="31dp"
            android:background="@drawable/editphone1"
            android:hint="@string/hintmau"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/displaytuoine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lucidatypewriterregular"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5sp"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.745" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="248dp"
            android:layout_height="55dp"
            android:src="@drawable/khungchua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.257"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.111" />

        <Button
            android:id="@+id/nextbutton2"
            android:layout_width="134dp"
            android:layout_height="41dp"
            android:background="@drawable/loginbutton1"
            android:fontFamily="@font/airbnbbold"
            android:text="@string/nextbutton"
            android:textColor="#FFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>